# ProjetFE

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: slam_toolbox_config.yaml  summit_controllers.yaml
hospital_map/: maps.pgm  maps.yaml
launch/: hospital_cam.py  nav2_launch.py  robot_launch.py  slam.py
nodes/: auto_explore.py  qr_code_detector.py
rviz_config/: nav2_config.rviz  robot_config.rviz  slam_config.rviz  summit_config.rviz
urdf/: robot.urdf
worlds/: hospital3.world  hospital_.world  hospital_env.world  hospitall.world  hospitalver1.world  newhospital.world
